add paragraph to index file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 <body>
   This is test learn for Git
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum dignissimos modi a esse, vel debitis dolores nobis
+    molestiae quasi, explicabo eius veritatis nemo! Nostrum sunt, unde quis dolor odio iusto.</p>
 </body>
 
 </html>
