--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
   This is test learn for Git
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum dignissimos modi a esse, vel debitis dolores nobis
     molestiae quasi, explicabo eius veritatis nemo! Nostrum sunt, unde quis dolor odio iusto.</p>
+
+  <ul>
+    <li>Home</li>
+    <li>Contact</li>
+    <li>About Us</li>
+  </ul>
 </body>
 
 </html>
